git HEAD

    * Result: Add qos code 79 ("Ohne Mehrzweckabteil")
    * db-iris: Accept UIC station codes

Travel::Status::DE::IRIS 1.03 - Tue Sep 15 2015

    * Result: Add info key 900
    * Station: Improve get_station matching quality by using the Levenshtein
      edit distance in addition to simple substring matching
    * new dependency: Text::LevenshteinXS (see README for notes about
      drop-in replacements)
    * new dependency: List::UtilsBy

Travel::Status::DE::IRIS 1.02 - Tue May 26 2015

    * Added github repo to dist metadata and the doc
    * Result: distinguish between overcrowded trains (q97) and very overcrowded
      trains (q96)
    * Result: Verify delay key 60 ("delays because of storm")
    * Result: Add qos key 70 ("no wifi" -- not entirely sure yet)

Travel::Status::DE::IRIS 1.01 - Fri May 15 2015

    * IRIS->new: Fix default lwp_options value (was documented, but not used)
    * Result->route_interesting: Also consider airports
    * Stations: Update DS100 code list. Fixes 9 stations in Köln, Düsseldorf
      and Wuppertal which had a wrong code/name combination assigned due to
      a parser error

Travel::Status::DE::IRIS 1.00 - Fri May 01 2015

    * IRIS->new: Use lwp_options to explicitly pass arguments to the
      LWP::UserAgent constructor. Unknown arguments are now longer
      implicitly passed on
    * db-iris: Improve output format for wing trains

Travel::Status::DE::IRIS 0.10 - Tue Apr 30 2015

    * Result: Fix deep recursion error in TO_JSON

Travel::Status::DE::IRIS 0.09 - Tue Apr 28 2015

    * Result: Add arrival_wings, departure_wings and is_wing accessors
      (a wing train is coupled to the respective departure, but has its own ID)
    * db-iris: Indicate wings in output
    * Result: Remove train_no_transfer accessor (was based on erroneous
      assumptions)
    * Result: Add is_unscheduled, replaced_by and replacement_for accessors
    * db-iris: Add -oR to show replacement information
