@@ -12,7 +12,7 @@ use Text::LevenshteinXS qw(distance);
 
 # TODO switch to Text::Levenshtein::XS once AUR/Debian packages become available
 
-our $VERSION = '1.03';
+our $VERSION = '1.04';
 
 my @stations = (
 
